test/tests/stages/18_structures/valid/parameters/libraries/classify_params.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[484]:
  int
  identifier(strcmp)
  (
  char
  *
  identifier(s1)
  ,
  char
  *
  identifier(s2)
  )
  ;
  struct
  identifier(twelve_bytes)
  {
  int
  identifier(i)
  ;
  char
  identifier(arr)
  [
  const int(8)
  ]
  ;
  }
  ;
  struct
  identifier(inner)
  {
  int
  identifier(i)
  ;
  char
  identifier(ch2)
  ;
  }
  ;
  struct
  identifier(nested_ints)
  {
  char
  identifier(ch1)
  ;
  struct
  identifier(inner)
  identifier(nested)
  ;
  }
  ;
  struct
  identifier(flattened_ints)
  {
  char
  identifier(c)
  ;
  int
  identifier(i)
  ;
  char
  identifier(a)
  ;
  }
  ;
  struct
  identifier(large)
  {
  int
  identifier(i)
  ;
  double
  identifier(d)
  ;
  char
  identifier(arr)
  [
  const int(10)
  ]
  ;
  }
  ;
  struct
  identifier(two_ints)
  {
  int
  identifier(i)
  ;
  int
  identifier(i2)
  ;
  }
  ;
  struct
  identifier(nested_double)
  {
  double
  identifier(array)
  [
  const int(1)
  ]
  ;
  }
  ;
  struct
  identifier(two_eightbytes)
  {
  double
  identifier(d)
  ;
  char
  identifier(c)
  ;
  }
  ;
  struct
  identifier(pass_in_memory)
  {
  double
  identifier(w)
  ;
  double
  identifier(x)
  ;
  int
  identifier(y)
  ;
  long
  identifier(z)
  ;
  }
  ;
  int
  identifier(test_twelve_bytes)
  (
  struct
  identifier(twelve_bytes)
  identifier(s)
  )
  ;
  int
  identifier(test_nested_ints)
  (
  struct
  identifier(nested_ints)
  identifier(s)
  )
  ;
  int
  identifier(test_flattened_ints)
  (
  struct
  identifier(flattened_ints)
  identifier(s)
  )
  ;
  int
  identifier(test_large)
  (
  struct
  identifier(large)
  identifier(s)
  )
  ;
  int
  identifier(test_two_ints)
  (
  struct
  identifier(two_ints)
  identifier(s)
  )
  ;
  int
  identifier(test_nested_double)
  (
  struct
  identifier(nested_double)
  identifier(s)
  )
  ;
  int
  identifier(test_two_eightbytes)
  (
  struct
  identifier(two_eightbytes)
  identifier(s)
  )
  ;
  int
  identifier(test_pass_in_memory)
  (
  struct
  identifier(pass_in_memory)
  identifier(s)
  )
  ;
  int
  identifier(test_twelve_bytes)
  (
  struct
  identifier(twelve_bytes)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(i)
  !=
  const int(0)
  ||
  identifier(strcmp)
  (
  identifier(s)
  .
  identifier(arr)
  ,
  string literal("lmnopqr")
  )
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_nested_ints)
  (
  struct
  identifier(nested_ints)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(ch1)
  !=
  const int(127)
  ||
  identifier(s)
  .
  identifier(nested)
  .
  identifier(i)
  !=
  const int(2147483647)
  ||
  identifier(s)
  .
  identifier(nested)
  .
  identifier(ch2)
  !=
  -
  const int(128)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_flattened_ints)
  (
  struct
  identifier(flattened_ints)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(c)
  !=
  const int(127)
  ||
  identifier(s)
  .
  identifier(i)
  !=
  const int(2147483647)
  ||
  identifier(s)
  .
  identifier(a)
  !=
  -
  const int(128)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_large)
  (
  struct
  identifier(large)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(i)
  !=
  const int(200000)
  ||
  identifier(s)
  .
  identifier(d)
  !=
  const double(23.25)
  ||
  identifier(strcmp)
  (
  identifier(s)
  .
  identifier(arr)
  ,
  string literal("abcdefghi")
  )
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_two_ints)
  (
  struct
  identifier(two_ints)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(i)
  !=
  const int(999)
  ||
  identifier(s)
  .
  identifier(i2)
  !=
  const int(888)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_nested_double)
  (
  struct
  identifier(nested_double)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(array)
  [
  const int(0)
  ]
  !=
  const double(25.125e3)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_two_eightbytes)
  (
  struct
  identifier(two_eightbytes)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(d)
  !=
  const double(1000.)
  ||
  identifier(s)
  .
  identifier(c)
  !=
  const char('x')
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
  int
  identifier(test_pass_in_memory)
  (
  struct
  identifier(pass_in_memory)
  identifier(s)
  )
  {
  if
  (
  identifier(s)
  .
  identifier(w)
  !=
  const double(1.7e308)
  ||
  identifier(s)
  .
  identifier(x)
  !=
  -
  const double(1.7e308)
  ||
  identifier(s)
  .
  identifier(y)
  !=
  -
  const int(2147483647)
  ||
  identifier(s)
  .
  identifier(z)
  !=
  -
  const long(9223372036854775807l)
  )
  {
  return
  const int(0)
  ;
  }
  return
  const int(1)
  ;
  }
